nginx/templates/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-test-2
  labels:
    app: nginx
  annotations:
    # Note that the annotation below is deprecated as of Kubernetes 1.18
    # in favor of the new spec.ingressClassName field. At the moment of writing
    # (Kong Ingress Controller v0.9.0), Kong Ingress Controller does not support
    # the new format yet.
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - poc-cluster-395118-14650cd5d7ec0d12de92bdc010dd3efa-0000.eu-de.containers.appdomain.cloud
      secretName: tls-nginx-secret
  rules:
    - host: poc-cluster-395118-14650cd5d7ec0d12de92bdc010dd3efa-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /test
            backend:
              serviceName: nginx-service
              servicePort: 80
